# wanctl

./: .dockerignore  .gitignore  .secrets.baseline  .vulture_whitelist.py  AGENTS.md  CAKE_AWARE_IMPLEMENTATION.md  CAKE_SAFE_PERFORMANCE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.example  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGES.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  EXPERT_SUMMARY.md  INSTALL_GUIDE.md  LIBRENMS_INSTALL_GUIDE.md  LICENSE  LOG_ANALYSIS_DELIVERABLE.md  LOG_ROTATION_SETUP.md  MONITORING_GUIDE_48HR.md  Makefile  OBSERVATION_PERIOD.md  PASSIVE_MONITORING.md  PHASE_2B_READINESS.md  PORTABILITY_CHECKLIST.md  README.md  RELEASE_NOTES_v1.0.0-rc1.md  RELEASE_NOTES_v1.0.0-rc2.md  RELEASE_NOTES_v1.0.0-rc3.md  RELEASE_NOTES_v1.0.0-rc4.md  RELEASE_NOTES_v1.0.0-rc5.md  RELEASE_NOTES_v1.0.0-rc7.md  STATE_BASED_FLOORS_DEPLOYMENT.md  STEERING_README.md  SYNTHETIC_TRAFFIC_DISABLED.md  SYSTEM_STATUS.md  (+42 more)
.archive/: container_network_audit.py  manifest.md
.claude/: context.md
.claude/reviews/: Phase4-comprehensive-2026-01-09.md  REVIEWS.md  __init__.2026-01-08.md  batch-2026-01-08.md  cake_stats.2026-01-08.md  comprehensive-2026-01-10.md  congestion_assessment.2026-01-08.md  daemon.2026-01-08.md  steering_confidence.2026-01-08.md  steering_daemon.2026-01-08.md
.gitea/workflows/: ci.yml  deploy-dry-run.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.hermes/scripts/: soak-watchdog.py
.planning/: AUDIT.md  CONTEXT.md  HANDOFF.json  MILESTONE-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  TRACEABILITY.md  WAITING.json  cake-ceiling-sweep-daytime-2026-04-04.md  cake-sweep-results-2026-04-04.md  config.json  spectrum-target-bloat-sweep-2026-04-15.md  v1.10-MILESTONE-AUDIT.md  v1.35-MILESTONE-AUDIT.md  v1.36-MILESTONE-AUDIT.md  v1.37-MILESTONE-AUDIT.md  v1.38-MILESTONE-AUDIT.md  v1.52-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: linux-cake-daemon-wiring.md
configs/: att.yaml  logrotate-wanctl  spectrum.yaml  steering.yaml
configs/bench/: README.md  (+1 more)
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  BRIDGE_QOS.md  CABLE_TUNING.md  CALIBRATION.md  CODE_REVIEW_2026-06-29.md  CONFIGURATION.md  CONFIG_SCHEMA.md  CONTAINER_NETWORK_AUDIT.md  CORE-ALGORITHM-ANALYSIS.md  DELIVERABLE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_CHECKPOINT_SUMMARY.md  EF_QUEUE_PROTECTION.md  EXECUTIVE_SUMMARY.md  EXPERT_SUMMARY.md  FALLBACK_CHECKS_IMPLEMENTATION.md  FALLBACK_CONNECTIVITY_CHECKS.md  FASTER_RESPONSE_INTERVAL.md  GETTING-STARTED.md  INTERVAL_TESTING_250MS.md  INTERVAL_TESTING_50MS.md  IOMMU_VERIFICATION.md  LOG_ANALYSIS_README.md  PASSIVE_MONITORING.md  PERFORMANCE.md  PERFORMANCE_GUIDE.md  PHASE220-MATRIX-RUNNER.md  PHASE243-BENCHMARK-RUNBOOK.md  PHASE_2A_ARCHITECTURE_SUMMARY.md  PHASE_2A_SOFT_RED.md  PHASE_2B_DESIGN.md  PHASE_2B_DRYRUN_OPERATIONS.md  PHASE_2B_WEEK1_ANALYSIS.md  PRODUCTION-OPS.md  PRODUCTION_INTERVAL.md  PROFILING.md  QOS_CLASSIFICATION_CONTRACT.md  (+15 more)
profiling_data/: DAY_1_RESULTS.md  DAY_2_RESULTS.md  README.md  REMINDER_DAY_14.md  REMINDER_DAY_7.md
reviews/: autorate_continuous_review_2026-01-08.md
scripts/: add_steering_rules.sh  analyze_baseline.py  analyze_profiling.py  analyze_storage_contention.py  burst-soak-check.sh  burst-validation.sh  cake-param-sweep.sh  calib_02_threshold.json  calibrate.sh  canary-check.sh  capture-fping-fixtures.sh  capture_fping_fixtures.py  check-cleanup-boundary.sh  check-large-files.sh  check-safe07-source-diff.sh  check-tuning-gate.sh  check_function_lines.py  check_private_access.py  check_test_brittleness.py  cleanup_production.sh  compact-metrics-dbs.sh  compare_ab.py  container_cleanup.sh  deploy-dry-run-gate.sh  deploy.sh  deploy_clean.sh  install-systemd.sh  install.sh  install_logrotate.sh  install_services.sh  libreqos-cli.mjs  live_preflight.py  migrate-storage.sh  phase191-flent-capture.sh  phase192-soak-capture.env.example  phase192-soak-capture.sh  phase196-soak-capture.env.example  phase196-soak-capture.sh  phase198-append-attempt-log.py  phase198-loaded-window-audit.py  (+96 more)
systemd/: cake-att-continuous.service  cake-att-continuous.timer  cake-att-passive.service  cake-att-passive.timer  cake-att-reset.service  cake-att.service  cake-att.timer  cake-continuous.service  cake-continuous.timer  cake-spectrum-continuous.service  cake-spectrum-continuous.timer  cake-spectrum-passive.service  cake-spectrum-passive.timer  cake-spectrum-reset.service  cake-spectrum-reset.timer  cake-spectrum.service  cake-spectrum.timer  capacity-mapper.service  capacity-mapper.timer  steering.service  steering.timer  wan-steering.service  wan-steering.timer  wanctl@.service  wanctl@.timer
tests/: __init__.py  conftest.py  helpers.py  test_advanced_tuning_strategies.py  test_alert_engine.py  test_alert_history.py  test_alerting_config.py  test_analyze_baseline.py  test_analyze_baseline_coverage.py  test_analyze_storage_contention.py  test_anomaly_alerts.py  test_asymmetry_analyzer.py  test_asymmetry_gate.py  test_asymmetry_health.py  test_asymmetry_persistence.py  test_att_cake_autorate_artifacts.py  test_autorate_baseline_bounds.py  test_autorate_config.py  test_autorate_continuous.py  test_autorate_continuous_coverage.py  test_autorate_entry_points.py  test_autorate_error_recovery.py  test_autorate_metrics_recording.py  test_autorate_telemetry.py  test_backends.py  test_baseline_rtt_manager.py  test_benchmark.py  test_boundary_check.py  test_bridge_qos_nft.py  test_burst_detector.py  test_cake_params.py  test_cake_signal.py  test_cake_stats.py  test_cake_stats_thread.py  test_calibrate.py  test_canary_check.py  test_check_cake.py  test_check_config.py  test_check_config_smoke.py  test_check_config_validators_fping.py  (+195 more)
(+3812 files in other folders)
