[project]
name = "wanctl"
version = "1.4.0"
description = "Adaptive CAKE bandwidth control for RouterOS"
requires-python = ">=3.11"

dependencies = [
  "requests>=2.31.0",
  "pyyaml>=6.0.1",
  "paramiko>=3.4.0",
  "pexpect>=4.9.0",
]

[project.scripts]
wanctl = "wanctl.autorate_continuous:main"
wanctl-calibrate = "wanctl.calibrate:main"
wanctl-steering = "wanctl.steering.daemon:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pyflakes>=3.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["wanctl"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["src", "tests"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1

[tool.coverage.html]
directory = "coverage-report"
show_contexts = true

[tool.pytest.ini_options]
addopts = "--cov-config=pyproject.toml"
