[project]
name = "wanctl"
version = "1.25.0"
description = "Adaptive CAKE bandwidth control for RouterOS"
requires-python = ">=3.11"

dependencies = [
  "requests>=2.33.0",
  "pyyaml>=6.0.1",
  "paramiko>=3.4.0",
  "tabulate>=0.9.0",
  "icmplib>=3.0.4",
]

[project.scripts]
wanctl = "wanctl.autorate_continuous:main"
wanctl-calibrate = "wanctl.calibrate:main"
wanctl-steering = "wanctl.steering.daemon:main"
wanctl-history = "wanctl.history:main"
wanctl-dashboard = "wanctl.dashboard.app:main"
wanctl-check-config = "wanctl.check_config:main"
wanctl-check-cake = "wanctl.check_cake:main"
wanctl-benchmark = "wanctl.benchmark:main"

[project.optional-dependencies]
dashboard = ["textual>=0.50", "httpx>=0.27"]
netlink = ["pyroute2>=0.9.5"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    # Security scanning tools
    "pip-audit>=2.10.0",
    "bandit>=1.9.3",
    "detect-secrets>=1.5.0",
    "pip-licenses>=5.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "C901",   # mccabe complexity
    "SIM",    # flake8-simplify
    "PERF",   # perflint
    "RET",    # flake8-return
    "PT",     # flake8-pytest-style
    "TRY",    # tryceratops
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    # v1.22 audit suppressions (FSCAN-06):
    # TRY: exception handling patterns acceptable in production controller
    "TRY003", # long exception messages -- descriptive errors aid debugging
    "TRY300", # try-consider-else -- style preference, existing patterns readable
    "TRY301", # raise-within-try -- common retry/re-raise pattern
    "TRY400", # logging.error vs logging.exception -- intentional (no traceback wanted)
    # ARG: unused arguments from interface contracts, callbacks, fixtures
    "ARG001", # unused function argument -- callbacks, signal handlers, fixture injection
    "ARG002", # unused method argument -- interface implementations, overrides
    "ARG004", # unused static method argument -- interface compliance
    "ARG005", # unused lambda argument -- event handler signatures
    # RET: return pattern preferences
    "RET504", # unnecessary assignment before return -- aids debugger inspection
    # SIM: simplification suggestions that reduce readability
    "SIM105", # contextlib.suppress vs try/except pass -- explicit is better
    "SIM108", # ternary vs if-else -- multi-line clarity preferred
    "SIM117", # multiple-with-statements -- nested context managers more readable
    # PT: pytest style preferences
    "PT006",  # parametrize names wrong type -- tuple vs list is style
    "PT011",  # pytest.raises too broad -- acceptable for exception-type testing
    "PT012",  # pytest.raises with multiple statements -- common setup pattern
    "PT018",  # composite assertion -- acceptable in unit tests
    # PERF: performance suggestions deferred to Phase 114
    "PERF401",# manual list comprehension -- defer optimization to Phase 114
    # ERA: commented-out code deferred to Phase 114
    "ERA001", # commented-out code -- defer cleanup to Phase 114 dead code removal
    # SIM: nested-if clarity
    "SIM102", # collapsible-if -- nested conditions more readable with comments
    # E: pre-existing suppressions
    "E741",   # ambiguous variable name -- math/network code uses i, l, n conventions
]

[tool.ruff.lint.mccabe]
max-complexity = 20  # permissive for audit baseline; functions >15 documented for Phase 114

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM102"]  # collapsible-if in tests -- readability over compactness
# C901: complex functions documented for Phase 114 reduction (CQUAL-05)
"src/wanctl/autorate_continuous.py" = ["C901"]  # run_cycle(30), main(68)
"src/wanctl/health_check.py" = ["C901"]         # _get_health_status(24)
"src/wanctl/steering/daemon.py" = ["C901"]      # main(23)

[tool.ruff.lint.isort]
known-first-party = ["wanctl"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["src", "tests"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
fail_under = 90

[tool.coverage.html]
directory = "coverage-report"
show_contexts = true

[tool.pytest.ini_options]
addopts = "--cov-config=pyproject.toml"

[tool.bandit]
exclude_dirs = [".venv", "build", "dist"]
# B101: assert used for invariant checks, not user input validation
# B311: random used for retry jitter timing, not cryptographic purposes
# B601: paramiko exec_command receives RouterOS API commands from internal code, not user input
skips = ["B101", "B311", "B601"]
